--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -5,8 +5,8 @@ body {
 }
 
 .form-signin {
-    max-width: 330px;
-    padding: 15px;
+    max-width: 430px;
+    padding: 20px;
     margin: 0 auto;
 }
 
@@ -25,8 +25,8 @@ body {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    padding: 10px;
-    font-size: 16px;
+    padding: 15px;
+    font-size: 18px;
 }
 
 .form-signin .form-control:focus {
@@ -34,7 +34,8 @@ body {
 }
 
 .form-signin input {
-    margin-top: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
 }
